Aporte de Alessandro Bonive

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
             <div class="card">
                 <div class="card-body">
                     <h1 class="card-title text-center py-3">Lizeth Alejandra Martínez Camargo</h1>
-                    <p class="card-text px-5 pb-5">Soy Ingeniera Multimedia, mi primer acercamiento
+                    <p class="card-text px-5 pb-5">
+                        Soy Ingeniera Multimedia, mi primer acercamiento
                         al mundo de la programación fue a través de un primo que era un apasionado
                         por temas tecnológicos, a partir de ahí y a lo largo de mi carrera me fui
                         enamorando poco a poco más de la programación, en un comienzo manejaba
@@ -82,8 +83,25 @@
         <section class="mt-5">
             <div class="card">
                 <div class="card-body">
-                    <h1 class="card-title text-center py-3">Karol</h1>
-                    <p class="card-text px-5 pb-5"></p>
+                    <h1 class="card-title text-center py-3">Karol Pacheco</h1>
+                    <p class="card-text px-5 pb-5">
+                        Soy tecnologa en analisis y desarrollo de sistemas de informacion, tecnologia que todavia estoy
+                        cursando. He tenido un leve contacto con React js, por lo que me urge refrescar los
+                        conocimientos previamente aprendidos.
+                        Mi experiencia con el desarrollo de software ha sido un grande reto.
+                        Empezando en medio de la pandemia todo se torno complicado puesto que las clases virtuales no
+                        generaban esa capacidad colaborativa y comunicativa que hubiera deseado.
+                        Sin embargo solia escuchar buenos comentarios de los instructores.
+                        <br><br>
+                        Cuando me adentre al ambito laboral todo se torno incluso mas dificil. Todos en el lugar de
+                        trabajo tenian conocimientos mas profundos que los mios. El trabajo en equipo fue todo un reto
+                        puesto que los demas compañeros al ser avanzados y no tener mucho tiempo libre , no lograban
+                        acomodarme a su estilo de trabajo. Fue extremadamente estresante al punto que decidi dejar el
+                        mundo de la programacion por cause de ese pesado ambiente laboral.
+                        <br><br>
+                        Sin embargo , aqui me encuentro nuevamente. El gran amor y respeto que tengo por la FIMLM me
+                        trajo a este curso gratis. He enfrentado dificultades adaptandome a las primeras clases pero no tengo nada que perder.
+                    </p>
                 </div>
             </div>
         </section>
