Modificacion del archivo html en  mi etiqueta  Section

--- a/index.html
+++ b/index.html
@@ -67,7 +67,23 @@
             <div class="card">
                 <div class="card-body">
                     <h1 class="card-title text-center py-3">Enrique Mejia Florez</h1>
-                    <p class="card-text px-5 pb-5"></p>
+                    <p class="card-text px-5 pb-5">
+                        Soy Ingeniero de Sistemas, mi primer acercamiento
+                        al mundo de la programación fue cuando me gradue como analista programador en el año 1998,
+                        trabaje dos años como analista de sistemas en la alcaldia municipal en El Banco Magdalena donde naci, por 
+                        casi dos años.  Decidi estudiar Ingenieria de sistemas en la Universidad Autonoma del Caribe graduado en el año 2000, en mis
+                        ultimos semestres de la carrera logre encontrar un trabajo como estudiante en practica en el rol de  Analista de requerimientos
+                        en un Proyecto que se llamo SIAA (Sistema de Informacion Academica y Administrativa) para la Universidad Simon Bolivar. 
+                        Luego me contrataron y estuve trabajando como ingeniero de Soporte y desarrollo utilizando como plataforma de desarrollo 
+                        Visual Basic 6 Enterprises y Base de Datos : DB2 por 17 años y tambien como profesor de Algoritmia I y II lenguaje C++ en la facultad de Ing. Industrial.
+                        
+                        <br><br>Mi experiencia fue en desarrollos netamente escritorio ahora en los dos ultimos años por mi propia cuenta decidi estudiar lo
+                        que es desarrollo Web por internet y me di cuenta que es mundo fascinante pero que maneja mucha tecnologia a la hora de construir un proyecto. 
+                        Hice un curso de React - Redux y Sequelize. Pero quiere ampliar mas mis conocimiento en React y por eso estoy aqui ya que el mundo del desarrollo me apasiona. 
+                        <br><br>Espero poder aportar en todo lo que aprenda en este diplomado en cual el Campus y su metodologia me gusta por que te explican muy bien las cosas. 
+                        
+                        <br><br>Gracias  a la fundacion y a ustedes profesores por la oportunidad.
+                    </p>
                 </div>
             </div>
         </section>
