--- a/index.html
+++ b/index.html
@@ -1,131 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tarea 2 Grupo 5</title>
-    <link rel="stylesheet" href="style.css" />
-    <!-- Bootstrap -->
-    <link href="css/bootstrap-4.3.1.css" rel="stylesheet" />
-    <link href="css/styles.css" rel="stylesheet" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap"
-      rel="stylesheet"
-    />
-  </head>
 
-  <body>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tarea 2 Grupo 5</title>
+    <link rel="stylesheet" href="style.css">
+    <!-- Bootstrap -->
+    <link href="css/bootstrap-4.3.1.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
+</head>
+
+<body>
     <div class="container mt-5">
-      <p id="title">
-        Tarea 2: Git y GitHub
-        <br />
-        Trabajo Colaborativo GitHub 5
-      </p>
-      <section>
-        <div class="card">
-          <div class="card-body">
-            <h1 class="card-title text-center py-3">
-              Lizeth Alejandra Martínez Camargo
-            </h1>
-            <p class="card-text px-5 pb-5">
-              Soy Ingeniera Multimedia, mi primer acercamiento al mundo de la
-              programación fue a través de un primo que era un apasionado por
-              temas tecnológicos, a partir de ahí y a lo largo de mi carrera me
-              fui enamorando poco a poco más de la programación, en un comienzo
-              manejaba lenguajes de programación como C++ y Java, y poco a poco
-              fui explorando otros lenguajes como Phyton para manejar programas
-              relacionados con inteligencia artificial y Visión por Computador.
-              <br /><br />En los últimos semestres de mi carrera descubrí el
-              mundo del desarrollo web, me llamo la atención, el diseño UX y UI;
-              tuve la oportunidad de explorar y poner en práctica todos estos
-              conocimientos adquiridos por medio de mi práctica laboral en la
-              que trabaje con frameworks como Ionic y Angular, bases de datos
-              como Firebase y obtuve algunos conocimientos en heroku
-              utilizándolo para creación de APIs. <br /><br />Posteriormente,
-              tuve la oportunidad de formar parte del programa Misión TIC 2022,
-              y allí tuve la experiencia de manejar servicios de computación en
-              nube con Oracle could, mejor mis habilidades con Java, trabajar
-              con bases de datos como MongoDB entre otros aspectos y tuve un
-              pequeño acercamiento al Framework de ReactJS.
-            </p>
-          </div>
-        </div>
-      </section>
-      <section class="mt-5">
-        <div class="card">
-          <div class="card-body">
-            <h1 class="card-title text-center py-3">
-              Juan David Montaña Bonilla
-            </h1>
-            <p class="card-text px-5 pb-5"></p>
-          </div>
-        </div>
-      </section>
-      <section class="mt-4">
-        <div class="card">
-          <div class="card-body">
-            <h1 class="card-title text-center py-3">
-              Cruzeugenio Alessandro Bonive Datica
-            </h1>
-            <p class="card-text px-5 pb-5"></p>
-          </div>
-        </div>
-      </section>
-      <section class="mt-5">
-        <div class="card">
-          <div class="card-body">
-            <h1 class="card-title text-center py-3">Enrique Mejia Florez</h1>
-            <p class="card-text px-5 pb-5"></p>
-          </div>
-        </div>
-      </section>
-      <section class="mt-5">
-        <div class="card">
-          <div class="card-body">
-            <h1 class="card-title text-center py-3">
-              Diego Fernando Pineda Rojas
-            </h1>
-            <p class="card-text px-5 pb-5">
-              Soy Diego Fernando Pineda Rojas, Ingeniero de Software y
-              Desarrollador Web, mis inicios en la programación se dieron cuando
-              empecé mi carrera profesional a mediados del año 2016, mis bases
-              en programación las inicié con Java y C#, seguidamente, empecé a
-              tener un mayor gusto por el desarrollo web, e inicié a investigar
-              por mi cuenta todo lo relacionado al desarrollo web, es así como
-              empecé a estudiar HTML, CSS y JavaScript, poco a poco fui
-              encontrando nuevas tecnologías hasta llegar a los frameworks web
-              como React.js en donde inicié a estudiarlo de manera autonoma, es
-              así como logre aprender a desarrollar aplicaciones web a partir de
-              estas tecnologías y decidí dar el paso en aprender a crear apps
-              móviles con React Native, aprovechando que ya tenía una pequeña
-              base de conocimiento en React. <br /><br />
-              Con el tiempo empecé a estudiar Node.js, la tecnología para
-              JavaScript del lado del servidor, solía ver videotutoriales en
-              YouTube de como crear apps de servidor con esta tecnología, ahí
-              aprendí las bases de datos NoSQL como MongoDB y aprendí a
-              desarrollar apps de backend para posteriormente poder crear
-              aplicaciones fullstack con JS.
-              <br /><br />
-              Actualmente, desarrollo pequeñas aplicaciones web de manera
-              independiente, mi objetivo a través de este Diplomado, es poder
-              mejorar mis habilidades con React.js para poder optar por un
-              trabajo en una gran empresa y seguir capacitandome, ya que este
-              mundo de la tecnología cada día avanza más.
-            </p>
-          </div>
-        </div>
-      </section>
-      <section class="mt-5">
-        <div class="card">
-          <div class="card-body">
-            <h1 class="card-title text-center py-3">Karol</h1>
-            <p class="card-text px-5 pb-5"></p>
-          </div>
-        </div>
-      </section>
+        <p id="title">
+            Tarea 2: Git y GitHub
+            <br> Trabajo Colaborativo GitHub 5
+        </p>
+        <section>
+            <div class="card">
+                <div class="card-body">
+                    <h1 class="card-title text-center py-3">Lizeth Alejandra Martínez Camargo</h1>
+                    <p class="card-text px-5 pb-5">Soy Ingeniera Multimedia, mi primer acercamiento
+                        al mundo de la programación fue a través de un primo que era un apasionado
+                        por temas tecnológicos, a partir de ahí y a lo largo de mi carrera me fui
+                        enamorando poco a poco más de la programación, en un comienzo manejaba
+                        lenguajes de programación como C++ y Java, y poco a poco fui explorando
+                        otros lenguajes como Phyton para manejar programas relacionados con
+                        inteligencia artificial y Visión por Computador.
+                        <br><br>En los últimos semestres de mi carrera descubrí el mundo del
+                        desarrollo web, me llamo la atención, el diseño UX y UI; tuve la oportunidad
+                        de explorar y poner en práctica todos estos conocimientos adquiridos por medio
+                        de mi práctica laboral en la que trabaje con frameworks como Ionic y Angular,
+                        bases de datos como Firebase y obtuve algunos conocimientos en heroku utilizándolo
+                        para creación de APIs.
+                        <br><br>Posteriormente, tuve la oportunidad de formar parte del programa Misión
+                        TIC 2022, y allí tuve la experiencia de manejar servicios de computación en nube
+                        con Oracle could, mejor mis habilidades con Java, trabajar con bases de datos
+                        como MongoDB entre otros aspectos y tuve un pequeño acercamiento al Framework
+                        de ReactJS.
+                    </p>
+                </div>
+            </div>
+        </section>
+        <section class="mt-5">
+            <div class="card">
+                <div class="card-body">
+                    <h1 class="card-title text-center py-3">Juan David Montaña Bonilla</h1>
+                    <p class="card-text px-5 pb-5"></p>
+                </div>
+            </div>
+        </section>
+        <section class="mt-4">
+            <div class="card">
+                <div class="card-body">
+                    <h1 class="card-title text-center py-3">Cruzeugenio Alessandro Bonive Datica</h1>
+                    <p class="card-text px-5 pb-5"></p>
+                </div>
+            </div>
+        </section>
+        <section class="mt-5">
+            <div class="card">
+                <div class="card-body">
+                    <h1 class="card-title text-center py-3">Enrique Mejia Florez</h1>
+                    <p class="card-text px-5 pb-5"></p>
+                </div>
+            </div>
+        </section>
+        <section class="mt-5">
+            <div class="card">
+                <div class="card-body">
+                    <h1 class="card-title text-center py-3">Diego Fernando Pineda Rojas</h1>
+                    <p class="card-text px-5 pb-5"></p>
+                </div>
+            </div>
+        </section>
+        <section class="mt-5">
+            <div class="card">
+                <div class="card-body">
+                    <h1 class="card-title text-center py-3">Karol</h1>
+                    <p class="card-text px-5 pb-5"></p>
+                </div>
+            </div>
+        </section>
     </div>
-  </body>
+
+</body>
+
 </html>
