Descripcion Aporte Karol

--- a/index.html
+++ b/index.html
@@ -82,8 +82,19 @@
         <section class="mt-5">
             <div class="card">
                 <div class="card-body">
-                    <h1 class="card-title text-center py-3">Karol</h1>
-                    <p class="card-text px-5 pb-5"></p>
+                    <h1 class="card-title text-center py-3">Karol Pacheco</h1>
+                    <p class="card-text px-5 pb-5">
+                        Soy tecnologa en analisis y desarrollo de sistemas de informacion.
+                        He estado en el mundo de la programación recientemente.
+                        <br><br>
+                        El mundo del desarrollo es muy amplio puesto que puede cubrir cualquier etapa de nuestra vida.
+                        Hoy en dia es importante y casi que esencial conocer acerca de la tecnologia.
+                        <br><br>
+                        Debido a que se presenta una alta demanda de programadores, estoy dispuesta a darle una segunda
+                        oportunidad
+                        al mundo de desarrollo adentrandome en el conocimiento de React js.
+                        <br><br>
+                    </p>
                 </div>
             </div>
         </section>
