--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,13 +12,10 @@
     <link href="css/styles.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap"
-      rel="stylesheet"
-    />
-  </head>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet" />
+</head>
 
-  <body>
+<body>
     <div class="container mt-5">
         <p id="title">
             Tarea 2: Git y GitHub
@@ -61,22 +59,22 @@
             <div class="card">
                 <div class="card-body">
                     <h1 class="card-title text-center py-3">Cruzeugenio Alessandro Bonive Datica</h1>
-                    <p class="card-text px-5 pb-5">Un saludo cordial, soy Técnico en informática. La 
-                        primera vez que me acerque al mundo de la programación, fue cuando estudiaba 
-                        ingeniería electrónica, en las clases de Algoritmos y en el siguiente semestre 
+                    <p class="card-text px-5 pb-5">Un saludo cordial, soy Técnico en informática. La
+                        primera vez que me acerque al mundo de la programación, fue cuando estudiaba
+                        ingeniería electrónica, en las clases de Algoritmos y en el siguiente semestre
                         con C++, siendo mi primer proyecto la realización de un juego.
 
-                        <br><br>Luego de este acontecimiento fui realizando cursos y capacitaciones en 
-                        PHP, Java, Wordpress, HTML, CSS, MYSQL y tuve también la oportunidad de realizar 
+                        <br><br>Luego de este acontecimiento fui realizando cursos y capacitaciones en
+                        PHP, Java, Wordpress, HTML, CSS, MYSQL y tuve también la oportunidad de realizar
                         un pequeño juego móvil con Unity.
 
-                        <br><br>Después de estas experiencias me vi interesado en el mundo del desarrollo 
-                        web, del cual desarrollé una tienda online para mi proyecto de tesis, y mis primeras 
-                        experiencias laborales fueron con la creación de modelos estáticos de html con su 
-                        respectivo css, para luego ya conocer y usar Bootstrap. Para luego entrar en el 
+                        <br><br>Después de estas experiencias me vi interesado en el mundo del desarrollo
+                        web, del cual desarrollé una tienda online para mi proyecto de tesis, y mis primeras
+                        experiencias laborales fueron con la creación de modelos estáticos de html con su
+                        respectivo css, para luego ya conocer y usar Bootstrap. Para luego entrar en el
                         desarrollo web de Wordpress y Prestashop en la modificación de sus plantillas.
-                        </p>
-                        <a class="card-text px-5 pb-5" href="https://github.com/Alessbd"> Link Github </a>
+                    </p>
+                    <a class="card-text px-5 pb-5" href="https://github.com/Alessbd"> Link Github </a>
                 </div>
             </div>
         </section>
@@ -87,19 +85,29 @@
                     <p class="card-text px-5 pb-5">
                         Soy Ingeniero de Sistemas, mi primer acercamiento
                         al mundo de la programación fue cuando me gradue como analista programador en el año 1998,
-                        trabaje dos años como analista de sistemas en la alcaldia municipal en El Banco Magdalena donde naci, por 
-                        casi dos años.  Decidi estudiar Ingenieria de sistemas en la Universidad Autonoma del Caribe graduado en el año 2000, en mis
-                        ultimos semestres de la carrera logre encontrar un trabajo como estudiante en practica en el rol de  Analista de requerimientos
-                        en un Proyecto que se llamo SIAA (Sistema de Informacion Academica y Administrativa) para la Universidad Simon Bolivar. 
-                        Luego me contrataron y estuve trabajando como ingeniero de Soporte y desarrollo utilizando como plataforma de desarrollo 
-                        Visual Basic 6 Enterprises y Base de Datos : DB2 por 17 años y tambien como profesor de Algoritmia I y II lenguaje C++ en la facultad de Ing. Industrial.
-                        
-                        <br><br>Mi experiencia fue en desarrollos netamente escritorio ahora en los dos ultimos años por mi propia cuenta decidi estudiar lo
-                        que es desarrollo Web por internet y me di cuenta que es mundo fascinante pero que maneja mucha tecnologia a la hora de construir un proyecto. 
-                        Hice un curso de React - Redux y Sequelize. Pero quiere ampliar mas mis conocimiento en React y por eso estoy aqui ya que el mundo del desarrollo me apasiona. 
-                        <br><br>Espero poder aportar en todo lo que aprenda en este diplomado en cual el Campus y su metodologia me gusta por que te explican muy bien las cosas. 
-                        
-                        <br><br>Gracias  a la fundacion y a ustedes profesores por la oportunidad.
+                        trabaje dos años como analista de sistemas en la alcaldia municipal en El Banco Magdalena donde
+                        naci, por
+                        casi dos años. Decidi estudiar Ingenieria de sistemas en la Universidad Autonoma del Caribe
+                        graduado en el año 2000, en mis
+                        ultimos semestres de la carrera logre encontrar un trabajo como estudiante en practica en el rol
+                        de Analista de requerimientos
+                        en un Proyecto que se llamo SIAA (Sistema de Informacion Academica y Administrativa) para la
+                        Universidad Simon Bolivar.
+                        Luego me contrataron y estuve trabajando como ingeniero de Soporte y desarrollo utilizando como
+                        plataforma de desarrollo
+                        Visual Basic 6 Enterprises y Base de Datos : DB2 por 17 años y tambien como profesor de
+                        Algoritmia I y II lenguaje C++ en la facultad de Ing. Industrial.
+
+                        <br><br>Mi experiencia fue en desarrollos netamente escritorio ahora en los dos ultimos años por
+                        mi propia cuenta decidi estudiar lo
+                        que es desarrollo Web por internet y me di cuenta que es mundo fascinante pero que maneja mucha
+                        tecnologia a la hora de construir un proyecto.
+                        Hice un curso de React - Redux y Sequelize. Pero quiere ampliar mas mis conocimiento en React y
+                        por eso estoy aqui ya que el mundo del desarrollo me apasiona.
+                        <br><br>Espero poder aportar en todo lo que aprenda en este diplomado en cual el Campus y su
+                        metodologia me gusta por que te explican muy bien las cosas.
+
+                        <br><br>Gracias a la fundacion y a ustedes profesores por la oportunidad.
                     </p>
                 </div>
             </div>
@@ -120,50 +128,51 @@
                 </div>
             </div>
         </section>
-       <section class="mt-5">
-        <div class="card">
-          <div class="card-body">
-            <h1 class="card-title text-center py-3">
-              Diego Fernando Pineda Rojas
-            </h1>
-            <p class="card-text px-5 pb-5">
-              Soy Diego Fernando Pineda Rojas, Ingeniero de Software y
-              Desarrollador Web, mis inicios en la programación se dieron cuando
-              empecé mi carrera profesional a mediados del año 2016, mis bases
-              en programación las inicié con Java y C#, seguidamente, empecé a
-              tener un mayor gusto por el desarrollo web, e inicié a investigar
-              por mi cuenta todo lo relacionado al desarrollo web, es así como
-              empecé a estudiar HTML, CSS y JavaScript, poco a poco fui
-              encontrando nuevas tecnologías hasta llegar a los frameworks web
-              como React.js en donde inicié a estudiarlo de manera autonoma, es
-              así como logre aprender a desarrollar aplicaciones web a partir de
-              estas tecnologías y decidí dar el paso en aprender a crear apps
-              móviles con React Native, aprovechando que ya tenía una pequeña
-              base de conocimiento en React. <br /><br />
-              Con el tiempo empecé a estudiar Node.js, la tecnología para
-              JavaScript del lado del servidor, solía ver videotutoriales en
-              YouTube de como crear apps de servidor con esta tecnología, ahí
-              aprendí las bases de datos NoSQL como MongoDB y aprendí a
-              desarrollar apps de backend para posteriormente poder crear
-              aplicaciones fullstack con JS.
-              <br /><br />
-              Actualmente, desarrollo pequeñas aplicaciones web de manera
-              independiente, mi objetivo a través de este Diplomado, es poder
-              mejorar mis habilidades con React.js para poder optar por un
-              trabajo en una gran empresa y seguir capacitandome, ya que este
-              mundo de la tecnología cada día avanza más.
-            </p>
-          </div>
-        </div>
-      </section>
-      <section class="mt-5">
-        <div class="card">
-          <div class="card-body">
-            <h1 class="card-title text-center py-3">Karol</h1>
-            <p class="card-text px-5 pb-5"></p>
-          </div>
-        </div>
-      </section>
+        <section class="mt-5">
+            <div class="card">
+                <div class="card-body">
+                    <h1 class="card-title text-center py-3">
+                        Diego Fernando Pineda Rojas
+                    </h1>
+                    <p class="card-text px-5 pb-5">
+                        Soy Diego Fernando Pineda Rojas, Ingeniero de Software y
+                        Desarrollador Web, mis inicios en la programación se dieron cuando
+                        empecé mi carrera profesional a mediados del año 2016, mis bases
+                        en programación las inicié con Java y C#, seguidamente, empecé a
+                        tener un mayor gusto por el desarrollo web, e inicié a investigar
+                        por mi cuenta todo lo relacionado al desarrollo web, es así como
+                        empecé a estudiar HTML, CSS y JavaScript, poco a poco fui
+                        encontrando nuevas tecnologías hasta llegar a los frameworks web
+                        como React.js en donde inicié a estudiarlo de manera autonoma, es
+                        así como logre aprender a desarrollar aplicaciones web a partir de
+                        estas tecnologías y decidí dar el paso en aprender a crear apps
+                        móviles con React Native, aprovechando que ya tenía una pequeña
+                        base de conocimiento en React. <br /><br />
+                        Con el tiempo empecé a estudiar Node.js, la tecnología para
+                        JavaScript del lado del servidor, solía ver videotutoriales en
+                        YouTube de como crear apps de servidor con esta tecnología, ahí
+                        aprendí las bases de datos NoSQL como MongoDB y aprendí a
+                        desarrollar apps de backend para posteriormente poder crear
+                        aplicaciones fullstack con JS.
+                        <br /><br />
+                        Actualmente, desarrollo pequeñas aplicaciones web de manera
+                        independiente, mi objetivo a través de este Diplomado, es poder
+                        mejorar mis habilidades con React.js para poder optar por un
+                        trabajo en una gran empresa y seguir capacitandome, ya que este
+                        mundo de la tecnología cada día avanza más.
+                    </p>
+                </div>
+            </div>
+        </section>
+        <section class="mt-5">
+            <div class="card">
+                <div class="card-body">
+                    <h1 class="card-title text-center py-3">Karol</h1>
+                    <p class="card-text px-5 pb-5"></p>
+                </div>
+            </div>
+        </section>
     </div>
-  </body>
+</body>
+
 </html>
