--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
                         como MongoDB entre otros aspectos y tuve un pequeño acercamiento al Framework
                         de ReactJS.
                     </p>
+                    <div class="text-center">
+                        <a href="https://github.com/LizethMartin" class="btn  btn-success">GitHub</a>
+                    </div>
                 </div>
             </div>
         </section>
@@ -55,6 +58,9 @@
                 <div class="card-body">
                     <h1 class="card-title text-center py-3">Juan David Montaña Bonilla</h1>
                     <p class="card-text px-5 pb-5"></p>
+                    <div class="text-center">
+                        <a href="#" class="btn  btn-success">GitHub</a>
+                    </div>
                 </div>
             </div>
         </section>
@@ -77,7 +83,9 @@
                         respectivo css, para luego ya conocer y usar Bootstrap. Para luego entrar en el
                         desarrollo web de Wordpress y Prestashop en la modificación de sus plantillas.
                     </p>
-                    <a class="card-text px-5 pb-5" href="https://github.com/Alessbd"> Link Github </a>
+                    <div class="text-center">
+                        <a href="https://github.com/Alessbd" class="btn  btn-success">GitHub</a>
+                    </div>
                 </div>
             </div>
         </section>
@@ -112,6 +120,9 @@
 
                         <br><br>Gracias a la fundacion y a ustedes profesores por la oportunidad.
                     </p>
+                    <div class="text-center">
+                        <a href="https://github.com/emejiaflorez" class="btn  btn-success">GitHub</a>
+                    </div>
                 </div>
             </div>
         </section>
@@ -131,10 +142,13 @@
                         al mundo de desarrollo adentrandome en el conocimiento de React js.
                         <br><br>
                     </p>
+                    <div class="text-center">
+                        <a href="https://github.com/Usernamek-dot" class="btn  btn-success">GitHub</a>
+                    </div>
                 </div>
             </div>
         </section>
-        <section class="mt-5">
+        <section class="my-5">
             <div class="card">
                 <div class="card-body">
                     <h1 class="card-title text-center py-3">
@@ -167,8 +181,12 @@
                         trabajo en una gran empresa y seguir capacitandome, ya que este
                         mundo de la tecnología cada día avanza más.
                     </p>
+                    <div class="text-center">
+                        <a href="https://github.com/diegofprdev" class="btn  btn-success">GitHub</a>
+                    </div>
                 </div>
             </div>
         </section>
     </div>
+
 </html>
